Mejorado las FK